[package]
name = "coco-edge-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
imageproc = "0.25"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"

[profile.release]
lto = true
codegen-units = 1
